[project]
authors = [{name = "François Steinmetz", email = "fs@hygeos.com"}]
name = "polymer"
requires-python = "<= 3.13"
version = "v4.17-beta2-dev"
description = "Polymer atmospheric correction algorithm (http://dx.doi.org/91364/OE.19.009783)"
dependencies = [
    "numpy",
    "h5py",
    "pyhdf",
    "cython",
    "pandas",
    "scipy",
    "netcdf4",
    "xarray",
]

[project.optional-dependencies]
git = [
    "core @ git+https://github.com/hygeos/core",
    "eoread @ git+https://github.com/hygeos/eoread",
    "eotools @ git+https://github.com/hygeos/eotools",
]

msi = ["glymur", "pyproj"]
gdal = ["gdal"]  # for GSW and landsat8
era5 = ["cdsapi"]
meris = ["pyepr"]
all = ["polymer[git]",
       "polymer[msi]",
       "polymer[gdal]",
       "polymer[era5]",
       "polymer[meris]",
       ]

[project.scripts]
polymer = "polymer.cli:main"

[build-system]
requires = [
    "meson-python",
    "cython",
    "numpy",
    "ninja",
]
build-backend = "mesonpy"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
# polymer = { path = ".", editable = true, extras = ["git"]}
core = { git = "git+https://github.com/hygeos/core"}
eoread = { git = "git+https://github.com/hygeos/eoread" }
eotools = { git = "git+https://github.com/hygeos/eotools" }
luts = { git = "git+https://github.com/hygeos/luts" }

[tool.setuptools.package-dir]
polymer = "polymer"

[tool.pixi.tasks]
tests = "pytest tests"

[tool.pixi.dependencies]
numpy = ">=2"
pytest = "*"
pytest-html = "*"
pytest-xdist = "*"
matplotlib-base = "*"
h5py = "*"
glymur = "*"
pyhdf = "*"
cython = "*"
gcc = "*"
gxx = "*"
pandas = "*"
scipy = "*"
gdal = "*"
cdsapi = "*"
pyproj = "*"
pyepr = "*"
netcdf4 = "*"
xarray = "*"
pint-xarray = "*"
cf-xarray = "*"
dask = "*"
meson = "*"